--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,32 @@
--i https://pypi.org/simple
-alembic==1.12.1; python_version >= '3.7'
-click==8.1.3; python_version >= '3.7'
-flask==2.2.2; python_version >= '3.7'
-flask-cors==3.0.10
-flask-login==0.6.2; python_version >= '3.7'
-flask-migrate==4.0.2; python_version >= '3.6'
-flask-sqlalchemy==3.1.1; python_version >= '3.7'
-flask-wtf==1.1.1; python_version >= '3.7'
-greenlet==3.0.1; python_version >= '3.7'
-gunicorn==20.1.0; python_version >= '3.5'
-importlib-metadata==6.9.0; python_version < '3.10'
-itsdangerous==2.1.2; python_version >= '3.7'
-jinja2==3.1.2; python_version >= '3.7'
-mako==1.2.4; python_version >= '3.7'
-markupsafe==2.1.2; python_version >= '3.7'
-python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
-python-dotenv==0.21.0; python_version >= '3.7'
-python-editor==1.0.4
-setuptools==69.0.2; python_version >= '3.8'
-six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
-sqlalchemy==2.0.30; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
-werkzeug==2.2.2; python_version >= '3.7'
-wtforms==3.0.1; python_version >= '3.7'
-zipp==3.17.0; python_version >= '3.8'
+# ---- Core Flask stack (compatible) ----
+Flask==2.2.5
+Werkzeug==2.2.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
+click==8.1.3
 
-boto3==1.40.14
+# ---- DB / ORM ----
+SQLAlchemy==2.0.30
+Flask-SQLAlchemy==3.1.1
+alembic==1.12.1
+greenlet==3.0.1
+
+# ---- Migrations / Forms / CORS / Login ----
+Flask-Migrate==4.0.2
+Flask-WTF==1.1.1
+WTForms==3.0.1
+Flask-Cors==3.0.10
+Flask-Login==0.6.2
+
+# ---- Postgres driver (psycopg v3) ----
 psycopg==3.2.9
 
+# ---- Misc ----
+python-dotenv==0.21.0
+python-dateutil==2.8.2
+Mako==1.2.4
+gunicorn==20.1.0
+setuptools==69.0.2
+six==1.16.0
+zipp==3.17.0
+boto3==1.40.14
