--- a/requirements.txt
+++ b/requirements.txt
@@ -18,8 +18,8 @@ WTForms==3.0.1
 Flask-Cors==3.0.10
 Flask-Login==0.6.2
 
-# ---- Postgres driver (psycopg v3) ----
-psycopg==3.2.9
+# ---- Postgres driver (psycopg v3) -----
+psycopg2-binary==2.9.9
 
 # ---- Misc ----
 python-dotenv==0.21.0
