--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,26 @@
-# ---- Core Flask stack (compatible) ----
-Flask==2.2.5
-Werkzeug==2.2.3
+alembic==1.9.2
+click==8.1.3
+Flask==2.2.2
+flask-cors==3.0.10
+flask-login==0.6.2
+flask-migrate==4.0.2
+flask-sqlalchemy==3.0.2
+flask-wtf==1.1.1
+greenlet==3.0.1
+gunicorn==20.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
-click==8.1.3
-
-# ---- DB / ORM ----
-SQLAlchemy==2.0.30
-Flask-SQLAlchemy==3.1.1
-alembic==1.12.1
-greenlet==3.0.1
-
-# ---- Migrations / Forms / CORS / Login ----
-Flask-Migrate==4.0.2
-Flask-WTF==1.1.1
-WTForms==3.0.1
-Flask-Cors==3.0.10
-Flask-Login==0.6.2
-
-# ---- Postgres driver (psycopg v3) -----
-psycopg2-binary==2.9.9
-
-# ---- Misc ----
-python-dotenv==0.21.0
-python-dateutil==2.8.2
 Mako==1.2.4
-gunicorn==20.1.0
+MarkupSafe==2.1.2
+python-dateutil==2.8.2
+python-dotenv==0.21.0
+python-editor==1.0.4
 setuptools==69.0.2
 six==1.16.0
+SQLAlchemy==1.4.46
+Werkzeug==2.2.2
+WTForms==3.0.1
 zipp==3.17.0
+
 boto3==1.40.14
+psycopg2-binary==2.9.9
